<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Storage Options App</string>
    <string name="action_settings">Settings</string>
    <string name="shared_prefs_button">Shared Preferences</string>
    <string name="json_button">JSON</string>
    <string name="external_storage_button">External Storage</string>
    <string name="internal_storage_button">Internal Storage</string>
    <string name="title_activity_shared_prefs">Shared Preferences</string>
    <string name="title_activity_internal_storage">Internal Storage</string>
    <string name="title_activity_external_storage">External Storage</string>
    <string name="title_activity_json">JSON</string>
    <string name="title_activity_sqlite">SQLite</string>
    <string name="save_data_button">Save Data</string>
    <string name="load_data_button">Load Data</string>
    <string name="data_to_save">Data to Save</string>
    <string name="sqlite_button">SQLite</string>

</resources>
